# commonplace

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cleanup.py  config.example.yaml  daemon.py  dashboard.py  local_classifier.py  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: install.sh
scripts/launchd/: com.commonplace.classifier.plist.template  com.commonplace.cleanup.plist.template  com.commonplace.dashboard.plist.template  com.commonplace.tracker.plist.template
templates/: dashboard.html  reports.html  search.html
tracker/: browser.py  capture.py  cleanup.py  config.py  db.py  idle.py  models.py  people.py  people_summary.py  screenshot.py  web_content.py
